--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@
   max-width: 1280px;
   width: 100%;
   margin: 0 auto;
-  font-family: 'Inter', 'Helvetica Neue', Arial, sans-serif;
+  font-family: Arial, sans-serif;
   color: #fff;
   background-color: #000;
   -moz-osx-font-smoothing: grayscale;
@@ -21,7 +21,7 @@
 }
 
 .content {
-  font-family: 'Inter', 'Helvetica Neue', Arial, sans-serif;
+  font-family: Arial, sans-serif;
   max-width: 880px;
   margin: 0 auto;
 }
@@ -86,11 +86,11 @@
 }
 
 .posts {
-  font-family: 'Inter', 'Helvetica Neue', Arial, sans-serif;
+  font-family: Arial, sans-serif;
   max-width: 880px;
   padding: 40px 0 40px;
   display: grid;
-  grid: repeat(10, 200px) / repeat(1, 1fr);
+  grid: 1fr / 1fr;
   gap: 10px;
 }
 
@@ -180,15 +180,133 @@
 .navigation__button:hover {
   opacity: 0.6;
 }
-.navigation__button-back {
-}
-
-.navigation__button-next {
-}
 
 .footer {
   max-width: 880px;
   margin: 0 auto;
   height: 100px;
   border-top: 1px solid rgba(84, 84, 84, 0.7);
+}
+
+.popup {
+  font-family: Arial, sans-serif;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 100;
+  color: #000;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s linear 0.3s, opacity 0.3s linear;
+}
+
+.popup__window {
+  position: relative;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
+  margin: auto;
+  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
+}
+.popup__title {
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 1.2px;
+  margin: 48px 64px 54px 36px;
+}
+
+.popup__save-button {
+  width: 358px;
+  height: 50px;
+  margin: 18px 0 37px;
+  font-family: inherit;
+  font-size: 18px;
+  line-height: 1.2px;
+  text-align: center;
+  color: #fff;
+  background-color: #000;
+  border-radius: 2px;
+  border: none;
+  cursor: pointer;
+  transition: opacity 0.3s ease;
+}
+.popup__form {
+  width: 358px;
+  margin: 0 36px;
+}
+
+.popup__input {
+  width: 100%;
+  height: 27px;
+  font-family: inherit;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.2;
+  margin: 3px 0 0;
+  border: 0;
+  box-sizing: border-box;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+.popup__save-button_inactive {
+  border: 1px solid #000000;
+  box-sizing: border-box;
+  border-radius: 2px;
+  background: #ffffff;
+  color: #000000;
+  opacity: 0.2;
+  cursor: auto;
+}
+
+.popup__save-button:hover {
+  opacity: 0.8;
+}
+
+.popup__close-button {
+  width: 32px;
+  height: 32px;
+  position: absolute;
+  top: -30px;
+  right: -40px;
+  background: none;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+  transition: opacity 0.3s ease;
+}
+
+.popup__close-button:hover {
+  opacity: 0.6;
+}
+
+.popup__close-button::before {
+  position: absolute;
+  content: ' ';
+  height: 32px;
+  border: 2px solid #fff;
+  top: 0;
+  background: #fff;
+  transform: rotate(45deg);
+}
+
+.popup__close-button::after {
+  position: absolute;
+  content: ' ';
+  height: 32px;
+  border: 2px solid #fff;
+  background: #fff;
+  top: 0;
+  transform: rotate(-45deg);
+}
+.popup_opened {
+  visibility: visible;
+  opacity: 1;
+  transition-delay: 0s;
 }
